@@ -8493,3 +8493,6 @@ EPRINTS-3.1-beta-2
 
 2009-11-20 cjg
  * Fixed connect-to-db-as-root bug in epadmin.
+
+2009-11-24 af05v
+ * Fixed Dataobj::tidy - undefined multiple fields causing crash.
